refactored characteristic compatibility rules and how RuleBasedCompatibilityService works